// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The GuessListMain component renders without crashing 1`] = `
<View
  style={
    {
      "borderRadius": 5,
      "borderWidth": 1,
      "flex": 1,
      "margin": 5,
      "minHeight": 0,
      "padding": 15,
    }
  }
>
  <Text>
    Your guess:
  </Text>
  <RCTScrollView
    data={[]}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    style={
      {
        "display": "flex",
        "flex": 1,
        "minHeight": 0,
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`The GuessListMain component renders without crashing when game over 1`] = `
<View
  style={
    {
      "borderRadius": 5,
      "borderWidth": 1,
      "flex": 1,
      "margin": 5,
      "minHeight": 0,
      "padding": 15,
    }
  }
>
  <Text>
    Your guess:
  </Text>
  <RCTScrollView
    data={
      [
        {
          "guess": "0",
          "id": "0",
          "result": [
            "0",
            "0",
          ],
        },
        {
          "guess": "1",
          "id": "1",
          "result": [
            "1",
            "1",
          ],
        },
        {
          "guess": "2",
          "id": "2",
          "result": [
            "2",
            "2",
          ],
        },
        {
          "guess": "3",
          "id": "3",
          "result": [
            "3",
            "3",
          ],
        },
        {
          "guess": "4",
          "id": "4",
          "result": [
            "4",
            "4",
          ],
        },
        {
          "guess": "5",
          "id": "5",
          "result": [
            "5",
            "5",
          ],
        },
        {
          "guess": "6",
          "id": "6",
          "result": [
            "6",
            "6",
          ],
        },
        {
          "guess": "7",
          "id": "7",
          "result": [
            "7",
            "7",
          ],
        },
        {
          "guess": "8",
          "id": "8",
          "result": [
            "8",
            "8",
          ],
        },
        {
          "guess": "9",
          "id": "9",
          "result": [
            "9",
            "9",
          ],
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    style={
      {
        "display": "flex",
        "flex": 1,
        "minHeight": 0,
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "row",
              "margin": 4,
              "padding": 4,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
                "flexDirection": "row",
                "marginLeft": 8,
                "marginRight": 8,
                "padding": 4,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                0
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                0
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "green",
                    "fontSize": 20,
                    "paddingRight": 8,
                  }
                }
              >
                0✓
              </Text>
              <Text
                style={
                  {
                    "color": "red",
                    "fontSize": 20,
                  }
                }
              >
                0X
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "row",
              "margin": 4,
              "padding": 4,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
                "flexDirection": "row",
                "marginLeft": 8,
                "marginRight": 8,
                "padding": 4,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                1
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                1
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "green",
                    "fontSize": 20,
                    "paddingRight": 8,
                  }
                }
              >
                1✓
              </Text>
              <Text
                style={
                  {
                    "color": "red",
                    "fontSize": 20,
                  }
                }
              >
                1X
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "row",
              "margin": 4,
              "padding": 4,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
                "flexDirection": "row",
                "marginLeft": 8,
                "marginRight": 8,
                "padding": 4,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                2
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                2
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "green",
                    "fontSize": 20,
                    "paddingRight": 8,
                  }
                }
              >
                2✓
              </Text>
              <Text
                style={
                  {
                    "color": "red",
                    "fontSize": 20,
                  }
                }
              >
                2X
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "row",
              "margin": 4,
              "padding": 4,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
                "flexDirection": "row",
                "marginLeft": 8,
                "marginRight": 8,
                "padding": 4,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                3
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                3
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "green",
                    "fontSize": 20,
                    "paddingRight": 8,
                  }
                }
              >
                3✓
              </Text>
              <Text
                style={
                  {
                    "color": "red",
                    "fontSize": 20,
                  }
                }
              >
                3X
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "row",
              "margin": 4,
              "padding": 4,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
                "flexDirection": "row",
                "marginLeft": 8,
                "marginRight": 8,
                "padding": 4,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                4
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                4
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "green",
                    "fontSize": 20,
                    "paddingRight": 8,
                  }
                }
              >
                4✓
              </Text>
              <Text
                style={
                  {
                    "color": "red",
                    "fontSize": 20,
                  }
                }
              >
                4X
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "row",
              "margin": 4,
              "padding": 4,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
                "flexDirection": "row",
                "marginLeft": 8,
                "marginRight": 8,
                "padding": 4,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                5
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                5
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "green",
                    "fontSize": 20,
                    "paddingRight": 8,
                  }
                }
              >
                5✓
              </Text>
              <Text
                style={
                  {
                    "color": "red",
                    "fontSize": 20,
                  }
                }
              >
                5X
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "row",
              "margin": 4,
              "padding": 4,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
                "flexDirection": "row",
                "marginLeft": 8,
                "marginRight": 8,
                "padding": 4,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                6
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                6
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "green",
                    "fontSize": 20,
                    "paddingRight": 8,
                  }
                }
              >
                6✓
              </Text>
              <Text
                style={
                  {
                    "color": "red",
                    "fontSize": 20,
                  }
                }
              >
                6X
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "row",
              "margin": 4,
              "padding": 4,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
                "flexDirection": "row",
                "marginLeft": 8,
                "marginRight": 8,
                "padding": 4,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                7
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                7
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "green",
                    "fontSize": 20,
                    "paddingRight": 8,
                  }
                }
              >
                7✓
              </Text>
              <Text
                style={
                  {
                    "color": "red",
                    "fontSize": 20,
                  }
                }
              >
                7X
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "row",
              "margin": 4,
              "padding": 4,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
                "flexDirection": "row",
                "marginLeft": 8,
                "marginRight": 8,
                "padding": 4,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                8
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                8
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "green",
                    "fontSize": 20,
                    "paddingRight": 8,
                  }
                }
              >
                8✓
              </Text>
              <Text
                style={
                  {
                    "color": "red",
                    "fontSize": 20,
                  }
                }
              >
                8X
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "row",
              "margin": 4,
              "padding": 4,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
                "flexDirection": "row",
                "marginLeft": 8,
                "marginRight": 8,
                "padding": 4,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                9
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                9
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "green",
                    "fontSize": 20,
                    "paddingRight": 8,
                  }
                }
              >
                9✓
              </Text>
              <Text
                style={
                  {
                    "color": "red",
                    "fontSize": 20,
                  }
                }
              >
                9X
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <Text>
    Game Over. You lose. The correct number is 1234.
  </Text>
</View>
`;

exports[`The GuessListMain component renders without crashing when game win 1`] = `
<View
  style={
    {
      "borderRadius": 5,
      "borderWidth": 1,
      "flex": 1,
      "margin": 5,
      "minHeight": 0,
      "padding": 15,
    }
  }
>
  <Text>
    Your guess:
  </Text>
  <RCTScrollView
    data={
      [
        {
          "guess": "0",
          "id": "0",
          "result": [
            "0",
            "0",
          ],
        },
        {
          "guess": "1",
          "id": "1",
          "result": [
            "1",
            "1",
          ],
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    style={
      {
        "display": "flex",
        "flex": 1,
        "minHeight": 0,
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "row",
              "margin": 4,
              "padding": 4,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
                "flexDirection": "row",
                "marginLeft": 8,
                "marginRight": 8,
                "padding": 4,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                0
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                0
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "green",
                    "fontSize": 20,
                    "paddingRight": 8,
                  }
                }
              >
                0✓
              </Text>
              <Text
                style={
                  {
                    "color": "red",
                    "fontSize": 20,
                  }
                }
              >
                0X
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "rgba(255, 255, 255, 0.8)",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "row",
              "margin": 4,
              "padding": 4,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
                "flexDirection": "row",
                "marginLeft": 8,
                "marginRight": 8,
                "padding": 4,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                1
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 20,
                  }
                }
              >
                1
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "green",
                    "fontSize": 20,
                    "paddingRight": 8,
                  }
                }
              >
                1✓
              </Text>
              <Text
                style={
                  {
                    "color": "red",
                    "fontSize": 20,
                  }
                }
              >
                1X
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <Text>
    Congratulations! You win.
  </Text>
</View>
`;
